Some minor changes, fixing the setup so that there is no longer a huge gap in the page.

--- a/public/style.css
+++ b/public/style.css
@@ -20,8 +20,3 @@ div.personal  {
 }
 div.reviews {
 }
-div.col-sm-9{
-    width: 100%;
-    margin: 0px;
-    margin: auto;
-}
